@@ -4,6 +4,7 @@ Roundcube Webmail ContextMenu
 2012 01 21
 ==========
  * Update after r5781
+ * Add inital support for Larry
 
 2011 12 10
 ==========
